--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 .ipynb_checkpoints/descendants-checkpoint.ipynb
 .ipynb_checkpoints/test-checkpoint.ipynb
 python2.7.exe.stackdump
+.ipynb_checkpoints/scratch-checkpoint.ipynb
