--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 .ipynb_checkpoints/test-checkpoint.ipynb
 python2.7.exe.stackdump
 .ipynb_checkpoints/scratch-checkpoint.ipynb
+.ipynb_checkpoints/scratch2-checkpoint.ipynb
