--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@
 python2.7.exe.stackdump
 .ipynb_checkpoints/scratch-checkpoint.ipynb
 .ipynb_checkpoints/scratch2-checkpoint.ipynb
+.ipynb_checkpoints/summary-checkpoint.ipynb
