the proof works

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@ python2.7.exe.stackdump
 .ipynb_checkpoints/scratch-checkpoint.ipynb
 .ipynb_checkpoints/scratch2-checkpoint.ipynb
 .ipynb_checkpoints/summary-checkpoint.ipynb
+.ipynb_checkpoints/Untitled-checkpoint.ipynb
+.ipynb_checkpoints/proof-checkpoint.ipynb
